--- a/self-shadow/README
+++ b/self-shadow/README
@@ -3,6 +3,7 @@
 3) Run createfits.py inside outputs directory. This will create necessary fits file out of image.out radmc3d output. 
 4) Run spectra.py inside outputs directory. This will plot the spectrum from the fits file.
 
+Iteration Process:
 Run iteration_driver.py to run the model iteratively. It first goes to the disk_single_run script and puts a density distribution based on vertically isothermal assumption.
 Then runs thermal radmc and get the initial temperature distribution. Then goes to vertical_hydrostatics script to calculate density from
 vertical hydrostatic equilibrium with given temperature distribution. It uses this new density in thermal radmc calculations to come up
